--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,88 @@
+# Arquivos de ajuda e metadados de build
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
+# Maven e dependências
+.mvn/
+!**/.mvn/wrapper/maven-wrapper.jar
+
+# Gradle e builds
+.gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+.gradle-cache/
+
+# STS (Spring Tool Suite)
 .apt_generated
 .classpath
 .factorypath
 .project
-.settings
+.settings/
 .springBeans
-.sts4-cache
+.sts4-cache/
 
-### IntelliJ IDEA ###
-.idea
+# IntelliJ IDEA
+.idea/
 *.iws
 *.iml
 *.ipr
+out/
 
-### NetBeans ###
+# Eclipse
+.metadata/
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*.swo
+
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
+# VS Code
 .vscode/
+
+# Arquivos de logs
+*.log
+logs/
+*.out
+
+# Arquivos de configuração locais
+*.env
+*.local
+*.config
+*.bak
+
+# Arquivos do sistema operacional
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Chaves e credenciais sensíveis
+*.key
+*.pem
+*.crt
+*.p12
+
+# Arquivos de backup e temporários
+*.tmp
+*.swp
+*.swo
+*.orig
+*.bak
+
+# Outros arquivos ignoráveis
+*.lock
+*.cache
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
